--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,8 +11,14 @@
 @import "grid";
 
 
-// Styles..
+// Fonts
+@import "font-awesome";
+@import "fontin-sans";
 
+// Styles..
+@import "header";
+@import "media";
+@import "content";
 // Components...
 
 // Utility classes...
