--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -15,21 +15,21 @@ $border-width:               .0714rem;
 //
 
 $body-bg:                    #fff;
-$body-color:                 #5f5f5f;
+$body-color:                 #4A4A4A;
 
 
 // Links
 
-$link-color:                 #000;
-$link-hover-color:           #ccc;
-$link-hover-decoration:      underline;
+$link-color:                 #0A47C2;
+$link-hover-color:           #EF2323;
+$link-hover-decoration:      none;
 
 
 // Typography
 //
-
-$font-family-sans-serif:     "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-family-serif:          Georgia, "Times New Roman", Times, serif;
+// fsregular
+$font-family-sans-serif:     fsregular, Helvetica, Arial, sans-serif;
+$font-family-serif:          'Andika', Georgia, "Times New Roman", Times, serif;
 $font-family-monospace:      Menlo, Monaco, Consolas, "Courier New", monospace;
 $font-family-base:           $font-family-sans-serif;
 
