--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -20,7 +20,7 @@
     background: #757575;
     text-align: center;
     // vertical-align: middle;
-    font-size: 2.4rem;
+    font-size: 30px;
     line-height: 40px;
     color: #fff;
   }
@@ -42,10 +42,6 @@
   &:hover {
     background: #54769A;
   }
-}
-
-.fa {
-  line-height: 38px;
 }
 
 // PDF button
