--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -35,7 +35,7 @@ h6 { font-size: $font-size-h6; }
 hr {
   margin-top: $spacer-y;
   margin-bottom: $spacer-y;
-  border-top: $hr-border-width solid $hr-border-color;
+  border-top: $hr-border-width solid $hr-border-color-2;
 }
 
 
