--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -1,13 +1,30 @@
 .resume-block {
   @include clearfix();
-  margin-bottom: .5rem;
+  margin-bottom: 2rem;
 }
 
-.col-sm-3 {
+.text-right {
   text-align: right;
 }
 
 .left-border {
-  border-left: 1px solid #000;
+  border-color: #000;
+  border-style: solid;
+  border-width: 0 0 0 1px;
+
+  @media (max-width: 768px) {
+    border-width: 1px 0 0;
+    padding: 5px 0 0;
+    margin-bottom: 20px;
+  }
 }
 
+.personal-data,
+.computer-skills,
+.education,
+.languages,
+.about-me {
+  span {
+    font-family: $font-family-small-caps;
+  }
+}
