--- a/scss/_fontin-sans.scss
+++ b/scss/_fontin-sans.scss
@@ -9,3 +9,16 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'fssc';
+    src: url('../fonts/fontin-sans/fontinsans_cyrillic_sc_46b-webfont.eot');
+    src: url('../fonts/fontin-sans/fontinsans_cyrillic_sc_46b-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/fontin-sans/fontinsans_cyrillic_sc_46b-webfont.woff2') format('woff2'),
+         url('../fonts/fontin-sans/fontinsans_cyrillic_sc_46b-webfont.woff') format('woff'),
+         url('../fonts/fontin-sans/fontinsans_cyrillic_sc_46b-webfont.ttf') format('truetype'),
+         url('../fonts/fontin-sans/fontinsans_cyrillic_sc_46b-webfont.svg#fontin_sans_crsc') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
