--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -9,6 +9,7 @@ header {
 
 .logo {
   display: block;
+  font-family: $font-family-small-caps;
   line-height: 4rem;
   font-size: 2.5rem;
 
@@ -25,6 +26,8 @@ header {
   display: block;
   line-height: 4rem;
   text-align: right;
+  font-size: 1.5rem;
+  color: #777;
 
   @media (max-width: 768px) {
     text-align: center;
