--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -2,8 +2,15 @@
   margin-bottom: 3rem;
 }
 
+.photo-block {
+  @media (max-width: 768px) {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+
 .photo {
-  display: block;
+  display: inline-block;
   height: 150px;
   width: 150px;
   border-radius: 50%;
@@ -20,9 +27,14 @@
     background: #757575;
     text-align: center;
     // vertical-align: middle;
-    font-size: 30px;
+    font-size: 29px;
     line-height: 40px;
     color: #fff;
+  }
+
+  @media (max-width: 768px) {
+    margin-bottom: 1rem;
+    text-align: center;
   }
 }
 
@@ -46,6 +58,7 @@
 
 // PDF button
 .pdf-button {
+  margin-top: 1rem;
   text-align: center;
 }
 
