--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -22,13 +22,14 @@
   margin: 0;
   a {
     display: table-cell;
-    height: 40px;
+    padding-top: 4px;
+    height: 36px;
     width: 40px;
     background: #757575;
     text-align: center;
     // vertical-align: middle;
     font-size: 29px;
-    line-height: 40px;
+    line-height: 36px;
     color: #fff;
   }
 
