--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -14,6 +14,14 @@
 	margin-bottom: 1rem;
 }
 
+
+
+.education-period {
+  font-size: .8rem;
+}
+
+
+
 .personal-data,
 .computer-skills,
 .education,
@@ -33,13 +41,34 @@
   }
 }
 
+.about-me-header {
+  @media (max-width: 568px) {
+    text-align: left;
+    width: 100%;
+  }
+}
+
+.about-me-desc {
+  @media (max-width: 568px) {
+    border-color: #ccc;
+    border-left-width: 0;
+    border-top-width: 1px;
+    padding-top: .8rem;
+    padding-bottom: 1rem;
+    width: 100%;
+  }
+}
+
 .study-list {
-  margin: 0;
+  margin: .3rem 0 0 0;
 
   > li > p {
     text-indent: 0;
   }
 }
+
+
+
 
 
 .computer-skills {
