--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -55,6 +55,8 @@ small,
 //
 
 // Unstyled keeps list items block level, just removes default browser padding and list-style
+//
+
 .list-unstyled {
   padding-left: 0;
   list-style: none;
