--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -29,7 +29,14 @@ header {
   font-size: 1.5rem;
   color: #777;
 
+
+  
+  @media (max-width: 1200px) {
+    text-align: left;
+  }
+
   @media (max-width: 768px) {
     text-align: center;
   }
+
 }
