--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -51,9 +51,15 @@
   }
 }
 
-.email-ico {
+.linkedin-ico {
   &:hover {
     background: #54769A;
+  }
+}
+
+.facebook-ico {
+  &:hover {
+    background: #446cb0;
   }
 }
 
